Add unused photo to testimonials section
- Added Ravi-Intuitive-Healer-Sensual-Bodyworker-Portland-OR-scaled.webp
- New testimonials layout with image on left, cards on right
- Image is sticky on desktop for nice scroll effect
- Mobile responsive: image stacks above testimonials
- All 4 photos now in use

--- a/public/index.html
+++ b/public/index.html
@@ -342,7 +342,12 @@
           <h2 id="testimonials-title">Sacred Testimonials</h2>
         </div>
 
-        <div class="testimonials-grid" role="list" aria-label="Client testimonials">
+        <div class="testimonials-layout">
+          <div class="testimonials-image">
+            <img src="Ravi-Intuitive-Healer-Sensual-Bodyworker-Portland-OR-scaled.webp" alt="Ravi in a peaceful healing setting" class="testimonials-photo">
+          </div>
+          
+          <div class="testimonials-grid" role="list" aria-label="Client testimonials">
           <article class="testimonial-card" role="listitem">
             <div class="testimonial-quote" aria-hidden="true">"</div>
             <p>I have worked with Ravi over the past two years and have found her to be enthusiastic, talented, intuitive and a committed practitioner. Her passion for this work is obvious and helps to create a nurturing and safe container to open and explore what will bring healing and a fuller expression of yourself as a sexual being. I highly recommend working with Ravi to anyone who seeks to be held in a loving and nurturing embrace to open, heal and experience deeper pleasure and joy through sacred touch.</p>
@@ -363,6 +368,7 @@
             <p><strong>Plainly speaking I loved it, it was beautiful and breathtaking and giving. Thank you Ravi.</strong></p>
             <div class="testimonial-author">~ Marc</div>
           </article>
+          </div>
         </div>
       </div>
     </section>
