Add new photo to services section
- Placed between 'What to Expect' steps and service cards
- Creates visual breathing room in the page
- Subtle hover effect with shadow enhancement
- Responsive with max-height for consistent layout
- All 5 photos now in use

--- a/public/index.html
+++ b/public/index.html
@@ -202,6 +202,11 @@
           </div>
         </div>
 
+        <!-- Visual Break Image -->
+        <div class="services-visual">
+          <img src="Ravi-Intuitive-Healer-Sensual-Bodyworker-Oregon-2-scaled-e1758300785855.webp" alt="Sacred healing space atmosphere" class="services-ambiance-photo">
+        </div>
+
         <div class="services-grid">
           <div class="service-card" data-service-id="video-coaching" style="cursor: pointer;" title="Click to select this service">
             <div class="service-price">$111</div>
