Fix syntax error in admin.html - remove double escapes

--- a/public/admin.html
+++ b/public/admin.html
@@ -7474,18 +7474,18 @@ Example:
           subheadline: `Discover ancient wisdom and modern techniques to transform your spiritual wellness`,
           benefits: [
             'Immediate access to transformative healing practices',
-            'Step-by-step guidance from Ravi\\'s 20+ years of experience',
+            'Step-by-step guidance from Ravi\'s 20+ years of experience',
             'Lifetime access to exclusive healing resources',
             'Join a community of conscious seekers'
           ],
           cta: 'Get Instant Access',
           formText: 'Enter your email to receive your free ' + type.toLowerCase(),
           emailSubject: `Your ${title} is Ready! 🪷`,
-          emailBody: `Namaste,\\n\\nThank you for your interest in ${title}. Your healing journey is sacred, and I'm honored to guide you.\\n\\nInside, you'll discover...\\n${desc}\\n\\nMay this resource bring light to your path.\\n\\nWith love and blessings,\\nRavi`
+          emailBody: `Namaste,\n\nThank you for your interest in ${title}. Your healing journey is sacred, and I'm honored to guide you.\n\nInside, you'll discover...\n${desc}\n\nMay this resource bring light to your path.\n\nWith love and blessings,\nRavi`
         };
 
         contentDiv.innerHTML = `
-          <h4 style=\"color: var(--burgundy); margin-bottom: 10px;\">✨ AI-Generated Content</h4>
+          <h4 style="color: var(--burgundy); margin-bottom: 10px;">✨ AI-Generated Content</h4>
           <p><strong>Headline:</strong> ${aiContent.headline}</p>
           <p><strong>Subheadline:</strong> ${aiContent.subheadline}</p>
           <p><strong>Benefits:</strong></p>
