--- a/public/admin.html
+++ b/public/admin.html
@@ -763,13 +763,13 @@
     /* ============ TABS - MANILA FOLDER STYLE ============ */
     .tabs {
       display: flex;
+      flex-wrap: wrap;
       gap: 4px;
       margin-bottom: 0;
-      overflow-x: auto;
-      overflow-y: visible;
       padding: 0 20px;
       position: relative;
       border-bottom: 3px solid var(--burgundy-dark);
+      align-items: flex-end;
     }
 
     .tab {
@@ -787,6 +787,7 @@
       margin-top: 6px;
       box-shadow: 0 -2px 4px rgba(0,0,0,0.05);
       transform-origin: bottom center;
+      flex-shrink: 0;
     }
 
     .tab:hover {
@@ -863,6 +864,43 @@
 
     .tab-content.active {
       display: block;
+    }
+
+    /* Responsive tabs for smaller screens */
+    @media (max-width: 768px) {
+      .tabs {
+        padding: 0 12px;
+        gap: 3px;
+      }
+
+      .tab {
+        padding: 12px 16px 10px 16px;
+        font-size: 14px;
+      }
+
+      .tab.active {
+        padding: 16px 16px 12px 16px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .tabs {
+        padding: 0 8px;
+        gap: 2px;
+      }
+
+      .tab {
+        padding: 10px 12px 8px 12px;
+        font-size: 13px;
+      }
+
+      .tab.active {
+        padding: 14px 12px 10px 12px;
+      }
+
+      .tab .badge {
+        display: none;
+      }
     }
 
     /* ============ MODAL ============ */
