Add manual lead entry and CSV bulk import for contact management - Support old contact lists and intake forms - Manual add with full details (name, email, phone, notes, interests) - CSV import with preview and validation - Remove video chat requirement for discovery calls

--- a/public/index.html
+++ b/public/index.html
@@ -723,7 +723,7 @@
           <a href="/admin.html" class="hidden-admin-link">🪷 Ravi Admin</a>
         </div>
         <div class="developer-credit">
-          <p>Built by <a href="mailto:Anth@StructuredForGrowth.com">Anth@StructuredForGrowth.com</a></p>
+          <p><a href="https://www.StructuredForGrowth.com">Built by Anth@StructuredForGrowth.com</a></p>
         </div>
       </div>
     </footer>
