--- a/public/privacy.html
+++ b/public/privacy.html
@@ -298,7 +298,7 @@
     </footer>
   </div>
   <div class="developer-footer">
-    <p>Built by <a href="mailto:Anth@StructuredForGrowth.com">Anth@StructuredForGrowth.com</a></p>
+    <p><a href="https://www.StructuredForGrowth.com">Built by Anth@StructuredForGrowth.com</a></p>
   </div>
 </body>
 </html>
