--- a/public/submit-testimonial.html
+++ b/public/submit-testimonial.html
@@ -349,7 +349,7 @@
   <!-- Admin Link -->
   <a href="/admin.html" class="hidden-admin-link" style="position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%); color: #722F37;" aria-label="Admin access">🪷 Ravi Admin</a>
   <div style="text-align: center; padding: 20px; font-size: 12px; color: #9E9890; background: #FDF8F3;">
-    <p style="margin: 0;">Built by <a href="mailto:Anth@StructuredForGrowth.com" style="color: #722F37; text-decoration: none;">Anth@StructuredForGrowth.com</a></p>
+    <p style="margin: 0;"><a href="https://www.StructuredForGrowth.com" style="color: #722F37; text-decoration: none;">Built by Anth@StructuredForGrowth.com</a></p>
   </div>
 </body>
 </html>
