Add comprehensive spiritual healing toolkit - Birthday field in intake form for astrology/numerology - Spiritual Profile tab in client cards with zodiac, life path number, insights - Astrology & Numerology calculator with personalized recommendations - Tarot, Pendulum, Energy Work session trackers - Kundalini Yoga practices library (grounding, heart opening, third eye, crown) - Pranayama breathing techniques reference (6 major techniques) - Bioenergetics with full chakra system visual guide - Recommended practices based on life path number - Spiritual session notes tracking per client - All tools integrated for Ravi's holistic healing practice

--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,10 @@
             <div class="form-group">
               <input type="tel" id="inquiry-phone" class="gate-input" placeholder="Phone (optional)">
             </div>
+            <div class="form-group">
+              <input type="date" id="inquiry-birthday" class="gate-input" placeholder="Your birthday (optional)" title="This helps Ravi provide personalized spiritual guidance">
+              <small style="color: #9E9890; font-size: 12px; margin-top: 4px; display: block;">Optional - helps with astrology & numerology guidance</small>
+            </div>
             <div class="form-group form-group-textarea">
               <textarea id="inquiry-message" class="gate-input" placeholder="What brings you to seek healing? Share what feels right..." rows="4" required></textarea>
             </div>
