ADD: Complete blog/vlog system with dual categories (Sensual Arts & Spiritual Wisdom) - Blog management in admin panel with create/edit/delete - Public blog.html page with filtering and single post view - Blog posts stored in encrypted blog_posts.enc - Support for text, images, YouTube/Vimeo video embeds - Draft and publish workflow - Link to blog from main site gate page

--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,12 @@
           <a href="/portal.html" class="btn-secondary">
             🎟️ Enter Your Invitation Code
           </a>
+          
+          <p style="margin-top: 24px; color: var(--soft-gray); font-size: 14px;">
+            <a href="/blog.html" style="color: var(--gold); text-decoration: none; font-weight: 500;">
+              📝 Read Ravi's Blog & Wisdom Teachings →
+            </a>
+          </p>
         </div>
         
         <p class="gate-footer">🔒 Your privacy is sacred. This site does not track or store cookies.<br><a href="/privacy.html">Privacy Policy</a></p>
